--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs_design_patterns",
+  "name": "nodejs_python_go_scala_design_patterns",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
